Komut işleme yapısı yenilendi 🏗